# wideprint

./: .gitignore  README.md  licence  pyproject.toml  readme.md
.github/workflows/: publish_to_pypi.yml
src/wideprint/: __init__.py
tests/: test_print_columns.py
